# dining-philosophers

./: CMakeLists.txt  Display.cpp  Display.h  DisplayConnector.cpp  DisplayConnector.h  Employee.cpp  Employee.h  EmployeeManager.cpp  EmployeeManager.h  Fork.h  Philosopher.cpp  Philosopher.h  README.md  Status.h  Waiter.cpp  Waiter.h  main.cpp
Office/: Desk.cpp  Desk.h  Office.cpp  Office.h
Office/Rooms/: Kitchen.cpp  Kitchen.h  MeetingRoom.cpp  MeetingRoom.h
Office/Rooms/KitchenItems/: Cup.cpp  Cup.h  Spoon.cpp  Spoon.h
